--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "C:\\Users\\sajjad.rasool\\Downloads\\node-v24.11.0-win-x64\\node.exe node_modules\\next\\dist\\bin\\next dev",
-    "build": "C:\\Users\\sajjad.rasool\\Downloads\\node-v24.11.0-win-x64\\node.exe node_modules\\next\\dist\\bin\\next build",
-    "start": "C:\\Users\\sajjad.rasool\\Downloads\\node-v24.11.0-win-x64\\node.exe node_modules\\next\\dist\\bin\\next start",
-    "lint": "C:\\Users\\sajjad.rasool\\Downloads\\node-v24.11.0-win-x64\\node.exe node_modules\\eslint\\bin\\eslint.js ."
+    "dev": "node node_modules/next/dist/bin/next dev",
+    "build": "node node_modules/next/dist/bin/next build",
+    "start": "node node_modules/next/dist/bin/next start",
+    "lint": "node node_modules/eslint/bin/eslint.js ."
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
